<resources>
    <string name="app_name">Schiphol</string>
    <string name="scheduled_date_label">Geplande vertrektijd</string>
    <string name="gate_label">Gate</string>
    <string name="terminal_label">Terminal</string>
    <string name="destination_label">Bestemming</string>
    <string name="state_label">Vluchtstatus</string>
    <string name="aircraft_label">Vliegtuig</string>
    <string name="favorite_label">Favoriet</string>
    <string name="view_on_maps_label">Bekijk op kaart</string>
    <string name="codeshare_label">Vlucht ook bekend als</string>
    <string name="airline_label">Vliegmaatschappij</string>
    <string name="channel_name">Shiphol</string>
    <string name="channel_description">Schiphol informatie</string>
    <string name="search_label">Vlucht zoeken</string>
    <string name="settings_label">Instellingen</string>
    <string name="contact_label">Schiphol toevoegen aan contacten</string>
    <string name="minutes">minuten</string>
    <string name="unknown">Onbekend</string>
    <string name="flight_deleted_from_favorites">Vlucht %s verwijderd uit favorieten</string>
    <string name="flight_added_to_favorites">Vlucht %s toegevoegd aan favorieten</string>
    <string name="scheduled">Gepland</string>
    <string name="delayed">Vertraagd</string>
    <string name="wait_in_lounge">Wacht in lounge</string>
    <string name="gate_open">Gate geopend</string>
    <string name="boarding">Instappen</string>
    <string name="gate_closing">Gate gaat sluiten</string>
    <string name="gate_closed">Gate gesloten</string>
    <string name="departed">Vertrokken</string>
    <string name="cancelled">Geannuleerd</string>
    <string name="gate_change">Gate veranderd</string>
    <string name="tomorrow">Morgen</string>
    <string name="state_unknown">Status onbekend - %s</string>
    <string name="flight_departed_title">Vlucht vertrokken</string>
    <string name="flight_departed_desc">Vlucht %s is vertrokken</string>
    <string name="gate_change_desc">De gate voor vlucht %s is veranderd van %s naar %s</string>
    <string name="flight_delayed_title">Vlucht vertraagd</string>
    <string name="flight_delayed_desc">Vlucht %s is vertraagd</string>
    <string name="flight_cancelled_title">Vlucht geannuleerd</string>
    <string name="flight_cancelled_desc">Vlucht %s is geannuleerd</string>
    <string name="gate_open_desc">De gate voor vlucht %s is geopend</string>
    <string name="gate_closed_desc">De gate voor vlucht %s is gesloten</string>
    <string name="boarding_start_title">Boarding is gestart</string>
    <string name="boarding_start_desc">Boarding voor vlucht %s is gestart</string>
    <string name="adding_contact_error">Er is een fout opgetreden tijdens het opslaan van schiphol in uw contacten. Probeer het later nog eens.</string>
    <string name="no_internet_error">Vluchten kunnen niet worden weergegeven zonder internetverbinding</string>
    <string name="flight_title">Vlucht %s</string>
    <string name="added_to_contact">Schiphol is toegevoegd aan uw contacten</string>
    <string name="no_contact_permission">De app heeft geen toegang tot uw contacten</string>
    <string name="notifications_enabled">Notificaties voor vluchten ingeschakeld</string>
    <string name="notifications_disabled">Notificaties voor vluchten uitgeschakeld</string>
    <string name="notifications_desc">Notificaties weergeven voor favoriete vluchten</string>
    <string name="notifications_title">Vlucht notifiaties weergeven</string>
</resources>
